# cgru

./: .gitignore
plugins/maya/: .gitignore  cgru.mod  cmake_build.sh  maya.env  maya.sh  userSetup.mel
plugins/maya/src/: CMakeLists.txt
plugins/maya/src/cmake/: FindMaya.cmake
plugins/maya/src/src/: definitions.h
plugins/maya/src/src/nodes/: makehgeo.cpp
utilities/ffmpeg/: .gitignore  build_faac.sh  build_ffmpeg.sh  build_lame.sh  build_vorbis.sh  build_x264.sh  get.sh
